vlib/v/checker/tests/inout/enum_err.vv
enum Color {
    green = 'green',
    blue,
}
